# lingq

./: .gitignore  404.html  LICENSE  README.md  index.html  justfile  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: docs.yml  release.yml
commands/: index.html
docs/: commands.md  gen_ref_pages.py  index.md  installation.md
docs/api-reference/: lingqhandler.md  models.md  utils.md
docs/stylesheets/: extra.css
docs/tutorials/: managing.md  uploading.md
docs/user-guide/: commands.md  workflows.md
etc/: languages.json  youtube.py
etc/aozora_roudoku/: 45.txt  45_lingq.txt  67.txt  67_lingq.txt  roudoku.py
etc/audio_processing/: split_audio.py  split_audio_by_tracklist.py  tracklist.txt  trim.py
etc/forced_alignment/: forced_alignment.py  test_forced_alignment.py
etc/gpt/: yt_questions.py
etc/markdowns/markdown_mine/: README.md
etc/roudoku/: roudoku.py
etc/scrape/greek/: sc_greek_language.py  sc_kathimerini.py  sc_papadiamantis.py  sc_wiktionary.py
etc/scrape/japanese/: sc_itazura.py  sc_sosekiproject.py  sc_syosetu.py
etc/stylus/: stylus.json
etc/text_processing/: split.py  test_split.py
etc/text_processing/fix/: test_fix_greek.py  test_fix_itazura.py
etc/text_processing/fix_greek/: test_fix_greek.py
etc/text_processing/fix_japanese/: test_fix_itazura.py
etc/text_processing/regex/: o
etc/text_processing/splits/: get_headings.py  split.py  split_multilevel.py
etc/whisper/: transcriber.py  yt_whisper.py
get/: get_courses.py  get_lessons.py  myclass.py
markdown/: coursestomd.py  myclass.py
markdown/all/courses/: courses_it.md
markdown/shared/courses/: courses_el.md  courses_es.md  courses_fr.md  courses_it.md  courses_ja.md
markdowns/: myclass.py
markdowns/shared/courses/: courses_el.md  courses_en.md  courses_es.md  courses_ja.md  courses_pt.md
others/audio_processing/: command.txt
others/scrape/greek/: sc_greek_language.py
others/scrape/japanese/: sc_itazura.py  sc_syosetu.py
others/text_processing/: fix_text.py  fix_text_itazura.py  gr.pl  i  ja.pl  regex_greek.txt
others/text_processing/fix_greek/: fix_greek.py  test_fix_greek.py
others/text_processing/fix_japanese/: fix_itazura.py  test_fix_itazura.py
others/text_processing/fix_text_other/: main.py  test.py
others/text_processing/regex/: ja.pl
others/text_processing/splits/: get_headings.py  split.py  split_multilevel.py
others/whisper/: transcriber.py  yt_whisper.py
patch/: patch.py  patch_audio.py  patch_text.py
post/: post.py
post/split/: 1.2 Εν τω μέσω φυλής Κολμυρίδων.txt
scripts/: stats.py
scripts/processing/audio processing/: split_audio.py
scripts/processing/text processing/: fix_text.py  fix_text_itazura.py  get_headings.py  split.py
scripts/processing/text processing/: fix_text.py  split_multilevel.py
search/: search_index.json
src/: cli.py  collection.py  config.py  fix.py  generate_timestamps.py  get_courses.py  get_lesson.py  get_lessons.py  get_pictures.py  get_words.py  library_overview.py  lingqhandler.py  make_markdown.py  patch.py  post.py  post_yt_playlist.py  resplit.py  show.py  sort_lessons.py  utils.py  yomitan.py
src/all/courses/: courses_de.md  courses_it.md  courses_ja.md
src/commands/: add_timestamps.py  fix.py  generate_timestamps.py  get_courses.py  get_images.py  get_lesson.py  get_lessons.py  get_pictures.py  get_words.py  library_overview.py  make_markdown.py  markdown.py  merge.py  mk_library_overview.py  mk_markdown.py  mk_yomitan.py  patch.py  post.py  post_yt_playlist.py  reindex.py  replace.py  resplit.py  show.py  sort.py  sort_lessons.py  stats.py  yomitan.py
src/fix_utils/el/: fix_greek.py  test_fix_greek.py
src/fix_utils/ja/: fix_itazura.py  fix_japanese.py  test_fix_itazura.py
src/lingq/: cli.py  config.py  lingqhandler.py  log.py  utils.py
src/lingq/commands/: add_timestamps.py  get_courses.py  get_images.py  get_lesson.py  get_lessons.py  get_words.py  merge.py  mk_library_overview.py  mk_markdown.py  mk_yomitan.py  patch.py  post.py  post_yt_playlist.py  reindex.py  replace.py  resplit.py  show.py  sort.py  stats.py
src/lingq/models/: cards.py  collection.py  collection_v3.py  hint.py  lesson_v3.py
src/models/: cards.py  collection.py  collection_v3.py  counter.py  hint.py  language.py  lesson.py  lesson_v3.py  my_collections.py  readings.py  test_models.py  transliteration.py
src/shared/courses/: courses_en.md  (+4 more)
src/split/: 1.1 Ο θάνατος του τριζονιού.txt
tests/: test_fix_greek.py  test_fix_itazura.py  test_lingq_handler.py  test_lingq_handler_base.py  test_markdown.py  test_utils.py  test_yomitan.py
tests/models/: test_cards.py  test_collection_v3.py  test_counter.py  test_lesson_v3.py
(+116 files in other folders)
